--- a/src/FormationBundle/Resources/views/eleve/index.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/index.html.twig
@@ -1,39 +1,34 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Eleve list</h1>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for eleve in eleves %}
-            <tr>
-                <td><a href="{{ path('eleve_show', { 'id': eleve.id }) }}">{{ eleve.id }}</a></td>
-                <td>{{ eleve.nom }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('eleve_show', { 'id': eleve.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('eleve_edit', { 'id': eleve.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <h1>eleve list</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col m12">
+                {% for eleve in eleves %}
+                    <figure>
+                        <img src="tigre.jpg" alt="Tigre" width="320" height="240" />
+                        <figcaption>
+                            <p>{{ eleve.nom }}</p>
+                            <p>{{ eleve.tel }}</p>
+                            <ul>
+                                <li>
+                                    <a href="{{ path('eleve_show', { 'id': eleve.id }) }}">show</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('eleve_edit', { 'id': eleve.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </figcaption>
+                    </figure>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 
     <ul>
         <li>
-            <a href="{{ path('eleve_new') }}">Create a new entry</a>
+            <a href="{{ path('promotion_new') }}">Create a new entry</a>
         </li>
     </ul>
 {% endblock %}
