--- a/src/FormationBundle/Resources/views/eleve/new.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/new.html.twig
@@ -16,9 +16,9 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form_label(form.logo) }}
-                        {{ form_widget(form.logo) }}
-                        {{ form_errors(form.logo) }}
+                        {{ form_label(form.file) }}
+                        {{ form_widget(form.file) }}
+                        {{ form_errors(form.file) }}
                     </div>
                     <div class="input-field col s6">
                         {{ form_label(form.adresse) }}
