--- a/src/FormationBundle/Resources/views/module/index.html.twig
+++ b/src/FormationBundle/Resources/views/module/index.html.twig
@@ -3,35 +3,41 @@
 {% block body %}
     <h1>Module list</h1>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Numero</th>
-                <th>Nom</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for module in modules %}
-            <tr>
-                <td><a href="{{ path('module_show', { 'id': module.id }) }}">{{ module.id }}</a></td>
-                <td>{{ module.numero }}</td>
-                <td>{{ module.nom }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('module_show', { 'id': module.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('module_edit', { 'id': module.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col s6">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Numero</th>
+                        <th>Nom</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for module in modules %}
+                    <tr>
+                        <td><a href="{{ path('module_show', { 'id': module.id }) }}">{{ module.id }}</a></td>
+                        <td>{{ module.numero }}</td>
+                        <td>{{ module.nom }}</td>
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="{{ path('module_show', { 'id': module.id }) }}">show</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('module_edit', { 'id': module.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
     <ul>
         <li>
