--- a/src/FormationBundle/Resources/views/eleve/new.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/new.html.twig
@@ -15,12 +15,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         {{ form_label(form.file) }}
                         {{ form_widget(form.file) }}
                         {{ form_errors(form.file) }}
                     </div>
-                    <div class="input-field col s6">
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
                         {{ form_label(form.adresse) }}
                         {{ form_widget(form.adresse) }}
                         {{ form_errors(form.adresse) }}
