--- a/src/FormationBundle/Resources/views/intervenant/index.html.twig
+++ b/src/FormationBundle/Resources/views/intervenant/index.html.twig
@@ -1,39 +1,40 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Intervenant list</h1>
+    <h1 class="titre">Liste des intervenants</h1>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for intervenant in intervenants %}
-            <tr>
-                <td><a href="{{ path('intervenant_show', { 'id': intervenant.id }) }}">{{ intervenant.id }}</a></td>
-                <td>{{ intervenant.nom }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('intervenant_show', { 'id': intervenant.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('intervenant_edit', { 'id': intervenant.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col m8 offset-m2">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th class="action">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for intervenant in intervenants %}
+                    <tr>
+                        <td>{{ intervenant.nom }}</td>
+                        <td>
+                            <ul>
+                                <li class="action">
+                                    <a href="{{ path('intervenant_edit', { 'id': intervenant.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
     <ul>
-        <li>
-            <a href="{{ path('intervenant_new') }}">Create a new entry</a>
+        <li class="button-centre">
+            <a class="btn btn-default edit_admin" href="{{ path('intervenant_new') }}">Create a new entry</a>
         </li>
     </ul>
 {% endblock %}
