--- a/src/FormationBundle/Resources/views/langage/index.html.twig
+++ b/src/FormationBundle/Resources/views/langage/index.html.twig
@@ -1,29 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>langue list</h1>
+    <h1 class="titre">Liste des différents langages</h1>
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col s6">
+        <div class="col m8 offset-m2">
             <table class="table">
                 <thead>
                 <tr>
                     <th>Nom</th>
-                    <th>Actions</th>
+                    <th class="action">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for langage in langages %}
                     <tr>
-                        <td><a href="{{ path('langage_show', { 'id': langage.id }) }}">{{ langage.id }}</a></td>
                         <td>{{ langage.nom }}</td>
                         <td>
                             <ul>
-                                <li>
-                                    <a href="{{ path('langage_show', { 'id': langage.id }) }}">show</a>
-                                </li>
-                                <li>
+                                <li class="action">
                                     <a href="{{ path('langage_edit', { 'id': langage.id }) }}">edit</a>
                                 </li>
                             </ul>
@@ -37,8 +33,8 @@
 </div>
 
     <ul>
-        <li>
-            <a href="{{ path('module_new') }}">Create a new entry</a>
+        <li class="button-centre">
+            <a class="btn btn-default edit_admin" href="{{ path('module_new') }}">Create a new entry</a>
         </li>
     </ul>
 {% endblock %}
