--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -21,7 +21,6 @@
                             {{ form_errors(form.file) }}
                         </div>
                         <div class="input-field col s6">
-                            {{ form_label(form.semaines) }}
                             {{ form_widget(form.semaines) }}
                             {{ form_errors(form.semaines) }}
                         </div>
@@ -40,12 +39,10 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
-                            {{ form_label(form.langage) }}
                             {{ form_widget(form.langage) }}
                             {{ form_errors(form.langage) }}
                         </div>
                         <div class="input-field col s6">
-                            {{ form_label(form.intervenant) }}
                             {{ form_widget(form.intervenant) }}
                             {{ form_errors(form.intervenant) }}
                         </div>
@@ -64,14 +61,12 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            {{ form_label(form.module) }}
                             {{ form_widget(form.module) }}
                             {{ form_errors(form.module) }}
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            {{ form_label(form.eleve) }}
                             {{ form_widget(form.eleve) }}
                             {{ form_errors(form.eleve) }}
                         </div>
@@ -84,7 +79,7 @@
 
     <ul>
         <li>
-            <a class="btn btn-default edit_admin" href="{{ path('module_index') }}">Back to the list</a>
+            <a class="btn btn-default edit_admin" href="{{ path('promotion_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
