--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+{% for eleve in eleve %}
+  <p>{{ eleve.nom }}</p>
+{% endfor %}
+
 	<table class="striped highlight">
       <thead>
         <tr>
