--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,9 +14,9 @@
     <body>
 
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Promotions</a></li>
+        <li><a>Promotions</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Eleves</a></li>
+        <li><a href="{{ path('archive_index') }}">Eleves</a></li>
     </ul>
     <nav>
         <div class="nav-wrapper">
