--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -40,6 +40,7 @@
                     <div class="row">
                         <div class="input-field col s6">
                             {{ form_widget(form.langage) }}
+                            {{ form_label(form.langage) }}
                             {{ form_errors(form.langage) }}
                         </div>
                         <div class="input-field col s6">
